kubernetes/infrastructure/controllers/openebs.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: openebs
